# bls-bible

./: .gitignore  .gitmodules  Dockerfile  README.md  app_config.json  bls_bible.py  cleaner.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
Data/TTP/T1003_OS_Credential_Dumping/: T1003.md
Data/TTP/T1005_Data_from_Local_System/: T1005.md
Data/TTP/T1007_System_Service_Discovery/: T1007.md
Data/TTP/T1010_Application_Window_Discovery/: T1010.md
Data/TTP/T1012_Query_Registry/: T1012.md
Data/TTP/T1014_Rootkit/: T1014.md
Data/TTP/T1016_System_Network_Configuration_Discovery/: T1016.md
Data/TTP/T1021_Remote_Services/: T1021.md
Data/TTP/T1030_Data_Transfer_Size_Limits/: T1030.md
Data/TTP/T1040_Network_Sniffing/: T1040.md
Data/TTP/T1047_Windows_Management_Instrumentation/: T1047.md
Data/TTP/T1053_Scheduled_Task-Job/: T1053.md
Data/TTP/T1055_Process_Injection/: T1055.md
bls_bible/: app.py  app_config.json  cli.py  default_app_config.json
bls_bible/lib/: devtools.py  file_editing.py  leaderboard.py  module.py  search.py  service.py  tags.py  threat_profiles.py  ui.py  update.py  utils.py  verse_of_the_day.py
bls_bible/static/: FULLTEXT.txt  FULLTEXT2.txt  genesis.txt  index.html  index_central.html  leaderboard.html  login.html  missing_techniques.json  outfile.txt  theme.json  update.html
bls_bible/test/: test_devtools.py  test_file_editing.py  test_leaderboard.py  test_page.md  test_profiles.json  test_search.py  test_service.py  test_ui.py  test_update.py  test_utils.py  test_verse_of_the_day.py
(+494 files in other folders)
